hphp/hack/test/typecheck/fc_enum_case_11.php.rust_elab.exp
File "fc_enum_case_11.php", line 3, characters 6-11:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "fc_enum_case_11.php", line 14, characters 11-12:
`switch` statement nonexhaustive; the following cases are missing: `B` (Typing[4019])
  File "fc_enum_case_11.php", line 3, characters 6-11:
  Enum declared here
